--- a/style.css
+++ b/style.css
@@ -1,11 +1,74 @@
+
+#header{
+  
+    margin:0px;
+    font-size:15px;
+    color:whitesmoke;
+    word-spacing:75px;
+  
+
+}
+
 h1{
     text-align:center;
-    font-size: 75px;
-    padding-top: 200px;
-    color:rgba(236, 236, 236, 0.9)
+    font-size: 60px;
+    padding-top: 225px;
+    color:rgba(236, 236, 236, 0.9);
+    margin:-5px;
 }
 body{
     background:
     url(https://i.imgur.com/9mv2XGt.gif);
     background-size: 100% 120%;
+    background-attachment: fixed;
 }
+h2{
+    padding-top:175px;
+    font-size: 35px;
+    color:rgba(236, 236, 236, 0.9);
+    text-align: left;
+}
+p{
+    
+    font-size: 20px;
+    font-style: bold;
+    color:rgba(255,255,255,1.5);
+    text-align: left;
+}
+h3 {
+    text-align:center;
+    font-size: 35px;
+    color:rgba(236, 236, 236, 0.9)
+}
+h3 a {
+    text-align:center;
+    font-size: 30px;
+    color:rgba(236, 236, 236, 0.9)
+}
+ul {
+    position:fixed;
+    list-style-type: none;
+    margin: -10px;
+    padding: 0px;
+    overflow: hidden;
+    background-color:rgb(0,25,25);
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 15px 17px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: gray;
+  }
+  a{
+    text-decoration: none;
+ }
